# cli-tooling

./: .gitignore  Cargo.toml  README.md  config.yaml  package.json
.github/workflows/: build-template-zips.yml  create-tag.yml  publish-homebrew.yml  release.yml  rollback.yml  validate-release.yml
crates/iii-cli/: Cargo.toml
crates/iii-cli/src/: main.rs
crates/iii-create/: Cargo.toml
crates/iii-create/src/: main.rs
crates/iii-tools/: Cargo.toml
crates/iii-tools/src/: main.rs
crates/motia-cli/: Cargo.toml
crates/motia-cli/src/: main.rs
crates/motia-create/: Cargo.toml
crates/motia-create/src/: main.rs
crates/motia-tools/: Cargo.toml
crates/motia-tools/src/: main.rs
crates/scaffolder-core/: Cargo.toml
crates/scaffolder-core/src/: lib.rs  product.rs  telemetry.rs
crates/scaffolder-core/src/runtime/: check.rs  mod.rs  tool.rs
crates/scaffolder-core/src/templates/: copier.rs  fetcher.rs  manifest.rs  version.rs
crates/scaffolder-core/src/tui/: prompts.rs
crates/scaffolder-core/tests/: e2e_cross_language_math.rs  e2e_quickstart.rs
crates/scaffolder-core/tests/e2e_harness/: mod.rs
scripts/: build-template-zips.sh  pre-commit
src/: main.rs
src/config/: generator.rs
src/runtime/: check.rs  iii.rs  mod.rs
src/templates/: copier.rs  fetcher.rs  manifest.rs  mod.rs  version.rs
src/tui/: app.rs  mod.rs  prompts.rs
src/tui/screens/: directory.rs  iii_check.rs  language_select.rs  mod.rs  summary.rs  template_select.rs
steps/: create-ticket.step.ts  escalate-ticket.step.ts  notify-customer.step.ts  sla-monitor.step.ts  triage-ticket.step.ts
templates/: template.yaml
templates/blank/: package.json  template.yaml
templates/blank/src/: typescript.step.ts
templates/iii/: default-iii-config  default-iii-config.yaml  template.yaml
templates/iii/cross-language-math/: template.yaml
templates/iii/cross-language-math/workers/caller-worker/: package.json
templates/iii/quickstart/: README.md  docker-compose.yaml  package.json  template.yaml
templates/iii/quickstart-ai-agents/: README.md  docker-compose.yaml  template.yaml
templates/iii/starter/: iii.config.yaml  package.json  template.yaml
templates/motia/: default-motia-iii-config.yaml  template.yaml
templates/motia/quickstart/: template.yaml
templates/quickstart/: package.json  template.yaml
templates/quickstart/src/: javascript.step.js  python_step.py  start.step.ts
test-qs/: iii.yaml
test-qs/src/: listener.step.ts  tutorial.config.ts  typescript.step.ts
testing/: iii.yaml
testing/src/: start.step.ts
(+38 files in other folders)
