[workspace]
resolver = "2"
members = [
    "crates/scaffolder-core",
    "crates/motia-tools",
    "crates/iii-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Motia Dev Team"]

[workspace.dependencies]
# Interactive prompts (Charm-style) - optional for TUI feature
cliclack = "0.3"
console = "0.15"

# Signal handling for clean exit
ctrlc = "3"

# Terminal styling
colored = "2"

# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# HTTP client for remote templates
reqwest = { version = "0.12", features = ["json"] }

# URL parsing and manipulation
url = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Version comparison
semver = "1"

# Directory operations
walkdir = "2"

# Zip archive extraction
zip = "2"

# Open URLs in browser
open = "5"

# Local crates
scaffolder-core = { path = "crates/scaffolder-core" }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units
strip = true        # Strip symbols from binary (Rust 1.59+)
