[package]
name = "iii-create"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI for scaffolding iii projects"

[[bin]]
name = "iii-create"
path = "src/main.rs"

[dependencies]
scaffolder-core = { workspace = true, features = ["tui"] }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
console = { workspace = true }
ctrlc = { workspace = true }
